# famiibo

./: .dockerignore  .gitignore  Cargo.toml  collect_amiibo.js  config.toml  download_amiibo_imgs.js  gen_html.js  gen_index.js  rename.js  villager_list.json
js/: gen_ac_misc.js  gen_animal_crossing.js  gen_fe.js  gen_index.js  gen_mario.js  gen_metroid.js  gen_zelda.js  prefix.js  villager_list.json
public/: acnh.js  amiibo.js  fe.js  index.html  shared.js  style.css
public/ac-misc/: index.html
public/acnh/: index.html
public/fire-emblem/: index.html
public/mario/: index.html
public/metroid/: index.html
public/style/: acnh.css  index.css  mario.css
public/zelda/: index.html
scripts/: failure.sh  pimiibo  success.sh
src/: main.rs  sse.rs
templates/: base.html  game.html  games.html
