[package]
name = "amiibo"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
pretty_env_logger = "0.4"
lazy_static = "1.4"
