[package]
name = "amiibo"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.8", features = ["macros", "sync", "rt-multi-thread", "process"] }
warp = "0.3"
